--- a/OpenLP2ProPresenter/OpenLP2ProPresenter.csproj
+++ b/OpenLP2ProPresenter/OpenLP2ProPresenter.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.15" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
   </ItemGroup>
 
 </Project>
